[package]
name = "pinocchio-fundraiser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.11.2"
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
pinocchio-pubkey = "0.3.0"
pinocchio-log = "0.5.1"
pinocchio-associated-token-account = "0.4.0"
wincode = { version = "0.4.5", default-features = false, features = ["derive"] }

[dev-dependencies]
litesvm = "0.12.0"
litesvm-token = "0.12.0"

solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-native-token = "3.0.0"
solana-pubkey = "4.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
solana-message = "3.0.1"
solana-sdk-ids = "3.1.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", default-features = false, features = ["no-entrypoint"] }
solana-rpc-client = "3.1.9"
solana-address = "2.2.0"
solana-account = "4.1.0"
